<resources>
    <string name="app_name">GI Calculator</string>
    <string name="genshin_impact_calculator">Genshin Impact Calculator</string>
    <string name="combine_different_elements_to_produce_an_output">Combine different elements to produce an output.</string>
    <string name="calculate">Calculate</string>
    <string name="select_element">Select Element</string>
    <string name="select_element1">Select Element</string>
    <string name="result">Result:</string>
    <string name="goBack">Go Back</string>

    <string-array name="elements">
        <item>Anemo</item>
        <item>Geo</item>
        <item>Pyro</item>
        <item>Hydro</item>
        <item>Cryo</item>
        <item>Dendro</item>
        <item>Electro</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="the_reaction_is">The Reaction is…</string>
    <string name="test">title_placeholder</string>
    <string name="description">desc_placeholder</string>
    <string name="select">Select</string>
    <string name="element_image">Element Image</string>
    <string name="genshin_impact_logo">Genshin Impact Logo</string>
    <string name="genshin_elements_in_order">Genshin Elements in order</string>
    <string name="placeholder_text">TextView</string>
    <string name="choose_the_2nd_element">Choose the 2nd Element:</string>
    <string name="choose_the_1st_element">Choose the 1st Element:</string>
</resources>